--- a/frontend/src/import/import.css
+++ b/frontend/src/import/import.css
@@ -7,3 +7,4 @@
 @import "../css/Signup.css";
 @import "../css/ProductList.css";
 @import "../css/ProductRegister.css";
+@import "../css/MyPage.css";
