--- a/frontend/src/css/ModalCategory.css
+++ b/frontend/src/css/ModalCategory.css
@@ -11,7 +11,7 @@
 /* 모달 박스 */
 .content-wrap {
   max-width: 1200px;
-  height: 100%;
+  height: 100vh;
   margin: 0 auto;
   display: flex;
   justify-content: center;
@@ -26,12 +26,11 @@
   background: #fff;
   border-radius: 16px;
   overflow: hidden;
-  box-shadow: 0 4px 21px rgba(175, 175, 175, 0.06);
+  overflow-y: auto;
+  box-shadow: 0 4px 16px rgba(175, 175, 175, 0.2);
 
   position: absolute;
   z-index: 1000;
-  top: 40px;
-  left: -20px;
 }
 
 /* 카테고리 리스트 */
