--- a/frontend/src/import/import.css
+++ b/frontend/src/import/import.css
@@ -6,5 +6,7 @@
 @import "../css/Login.css";
 @import "../css/Signup.css";
 @import "../css/ProductList.css";
+@import "../css/ProductDetail.css";
 @import "../css/ProductRegister.css";
 @import "../css/MyPage.css";
+@import "../css/Article.css";
