--- a/frontend/src/import/import.css
+++ b/frontend/src/import/import.css
@@ -10,3 +10,4 @@
 @import "../css/ProductRegister.css";
 @import "../css/MyPage.css";
 @import "../css/Article.css";
+@import "../css/SearchPage.css";
