--- a/frontend/src/css/App.css
+++ b/frontend/src/css/App.css
@@ -33,7 +33,11 @@ body {
 
 .flex-box {
   display: flex;
-  gap: 40px;
+}
+
+.flex-column {
+  display: flex;
+  flex-direction: column;
 }
 
 .img-box {
@@ -60,6 +64,14 @@ body {
   justify-content: center;
   align-items: center;
   background-color: #eee;
+}
+
+.border-top::before {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 1px;
+  background: #eee;
 }
 
 /* 공통 버튼 스타일 */
