--- a/frontend/src/css/Article.css
+++ b/frontend/src/css/Article.css
@@ -1,1 +1,133 @@
+.article-form {
+  width: 100%;
+  margin-bottom: 1rem;
 
+  color: #333;
+}
+
+.article-input,
+.article-btn,
+.article-textarea {
+  width: 100%;
+  padding: 12px 16px;
+  background: #fff;
+  border-style: none;
+  border: 1px solid #ddd;
+  border-radius: 12px;
+  color: #aaa;
+  font-size: 16px;
+  font-weight: 400;
+  white-space: nowrap;
+}
+
+.article-input,
+.article-textarea {
+  margin-top: 8px;
+}
+
+.article-textarea {
+  white-space: pre-wrap;
+}
+
+.article-label {
+  font-size: 16px;
+  font-weight: 500;
+  margin-left: 4px;
+}
+
+.article-textarea {
+  height: 240px;
+  resize: none;
+}
+
+.btn-wrap {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: end;
+}
+
+.article-btn {
+  width: fit-content;
+  font-size: 14px;
+}
+
+:is(.article-input, .article-textarea):focus {
+  color: #333;
+  border-color: #ddd;
+}
+
+.article-btn:active {
+  color: #b17576;
+  border-color: #b17576;
+}
+
+.article-form.article-review {
+  margin-top: 24px;
+  gap: 10px;
+}
+
+.article-textarea.article-review {
+  height: 100px;
+  margin: 0;
+}
+
+.flex-column.gap-24 {
+  gap: 24px;
+}
+
+.flex-column.gap-18 {
+  gap: 18px;
+}
+
+.flex-column.gap-12 {
+  gap: 12px;
+}
+
+.flex-column.gap-8 {
+  gap: 8px;
+}
+
+.flex-column.gap-4 {
+  gap: 4px;
+}
+
+.flex-box.gap-4 {
+  gap: 4px;
+}
+
+.flex-box.between {
+  justify-content: space-between;
+}
+
+.article-txt {
+  color: #aaa;
+}
+
+.article-content {
+  margin: 1rem 0 2rem;
+  white-space: pre-wrap;
+  line-height: 1.3;
+}
+
+.review-box {
+  margin-top: 3rem;
+}
+
+.review-title {
+  font-size: 20px;
+  font-weight: 700;
+}
+
+.article-textarea.article-review-li {
+  height: fit-content;
+}
+
+.review-li {
+  list-style: none;
+}
+
+.reply-title {
+  font-size: 18px;
+  font-weight: 600;
+}
