--- a/frontend/src/css/SearchPage.css
+++ b/frontend/src/css/SearchPage.css
@@ -31,9 +31,22 @@
   border-color: #b17576;
 }
 
+.search-btn:active, .search-btn:hover {
+  color: #b17576;
+  border-color: #b17576;
+}
+
 .no-content-text {
   color: #aaa;
   font-size: 18px;
+}
+
+.category-checkbox-group{
+  white-space: nowrap;
+}
+
+.categroy-label {
+  align-items: center;
 }
 
 /* SelectBox.tsx */
