통합검색 필터링 오류 해결, 큐앤에이 수정삭제 추가

--- a/frontend/src/css/Article.css
+++ b/frontend/src/css/Article.css
@@ -104,6 +104,18 @@
   gap: 12px;
 }
 
+.flex-box.gap-16 {
+  gap: 16px;
+}
+
+.flex-box.gap-24 {
+  gap: 24px;
+}
+
+.flex-box.gap-36 {
+  gap: 36px;
+}
+
 .flex-box.between {
   justify-content: space-between;
 }
