--- a/frontend/src/css/SearchPage.css
+++ b/frontend/src/css/SearchPage.css
@@ -103,7 +103,7 @@
   vertical-align: middle;
   border-left: 6px solid transparent;
   border-right: 6px solid transparent;
-  border-top: 6px solid #aaa;
+  border-top: 6px solid #ccc;
   transition: transform 0.2s ease;
 }
 
