--- a/frontend/src/css/ProductDetail.css
+++ b/frontend/src/css/ProductDetail.css
@@ -1,3 +1,33 @@
 .flex-box.product-detail {
   gap: 40px;
 }
+
+.position-rl {
+  position: relative;
+}
+
+.position-ab {
+  position: absolute;
+  top: 16px;
+  right: 8px;
+}
+
+.after-wrap {
+  display: flex;
+  align-items: end;
+  gap: 10px;
+  margin-bottom: 8px;
+}
+
+.after::after {
+  content: "";
+  display: inline-block;
+  margin-left: 10px;
+  height: 14px;
+  width: 1px;
+  background: #ddd;
+}
+
+.after:last-of-type::after {
+  content: none;
+}
