--- a/frontend/src/css/SearchPage.css
+++ b/frontend/src/css/SearchPage.css
@@ -45,6 +45,19 @@
   white-space: nowrap;
 }
 
+.category-checkbox-group::after{
+  content: "";
+  display: block;
+  width: 100%;
+  height: 1px;
+  background: #ddd;
+  margin: 1rem 0;
+}
+
+.category-checkbox-group:last-of-type::after{
+  content: none;
+}
+
 .categroy-label {
   align-items: center;
 }
