--- a/frontend/src/css/App.css
+++ b/frontend/src/css/App.css
@@ -551,7 +551,6 @@ button:disabled {
   border: 1px solid #ddd;
   border-radius: 12px;
   white-space: nowrap;
-  overflow: hidden;
 }
 
 .bid-box:last-of-type {
@@ -719,6 +718,10 @@ button:disabled {
 
 .height-70 {
   height: 70px;
+}
+
+.height-200 {
+  height: 200px;
 }
 
 .height-220 {
