입찰 표기/등록 중복요청 오류 해결

--- a/frontend/src/css/App.css
+++ b/frontend/src/css/App.css
@@ -212,8 +212,12 @@ a {
   border-color: #b17576;
 }
 
+input::placeholder {
+  color: #ddd;
+}
+
 .input::placeholder {
-  color: #666;
+  color: #ddd;
 }
 
 .form-group {
