--- a/frontend/src/css/App.css
+++ b/frontend/src/css/App.css
@@ -307,6 +307,41 @@ input::placeholder {
   margin-bottom: 1rem;
 }
 
+.btn-social {
+  width: 44px;
+  height: 44px;
+  box-sizing: border-box;
+  padding: 8px;
+  border: 1px solid #eee;
+  border-radius: 100%;
+  overflow: hidden;
+}
+
+.btn-social svg {
+  width: 100%;
+  height: 100%;
+  display: block;
+}
+
+.btn-social.naver svg {
+  width: 70%;
+  height: 70%;
+}
+
+.google {
+  border-color: #eee;
+}
+
+.naver {
+  border-color: #2db400;
+  background-color: #2db400;
+}
+
+.kakao {
+  border-color: #FEE500;
+  background-color: #FEE500;
+}
+
 .search-input,
 .search-btn {
   width: 100%;
