--- a/frontend/src/css/modules.css
+++ b/frontend/src/css/modules.css
@@ -1,6 +1,6 @@
 /*
-(ex) modules.css
-모든 버튼에 적용할 공통 스타일
+(ex) 모든 버튼에 적용할 공통 스타일
+버튼
 .btn-base {
   @apply py-2 px-4 font-semibold rounded shadow transition duration-200 ease-in-out;
 }
