--- a/frontend/src/css/App.css
+++ b/frontend/src/css/App.css
@@ -477,9 +477,9 @@ button:disabled {
   color: #eee;
 }
 
-/* SelectBox.tsx */
+/* SelectStyle.tsx */
 
-/* SelectBox 전체 컨테이너 */
+/* SelectStyle 전체 컨테이너 */
 .custom-select-box {
   display: inline-block;
   color: #333;
