--- a/frontend/src/common/import.css
+++ b/frontend/src/common/import.css
@@ -1,9 +1,13 @@
-/* Tailwind CSS (Preflight & Utilities) */
-@import "../css/tailwind.css";
+/* Tailwind CSS v4 */
+@import "tailwindcss";
 
 /* 기본 설정 (리셋, 변수) */
 @import "../css/reset.css";
 @import "../css/base.css";
+
+/* @apply를 사용하는 커스텀 모듈 */
+@import "../css/layout.css";
+@import "../css/modules.css";
 
 /* 컴포넌트 스타일 */
 @import "../css/AdminPage.css";
