--- a/frontend/src/css/App.css
+++ b/frontend/src/css/App.css
@@ -202,8 +202,8 @@ a {
 
 :is(.input, .textarea, .select):disabled {
   background-color: #f0f0f0; /* 연한 회색 배경 */
-  color: #999;               /* 글자 색도 연하게 */
-  cursor: not-allowed;       /* 마우스 커서도 막힘 느낌 */
+  color: #999; /* 글자 색도 연하게 */
+  cursor: not-allowed; /* 마우스 커서도 막힘 느낌 */
 }
 
 .input:focus {
@@ -338,8 +338,8 @@ input::placeholder {
 }
 
 .kakao {
-  border-color: #FEE500;
-  background-color: #FEE500;
+  border-color: #fee500;
+  background-color: #fee500;
 }
 
 .search-input,
