--- a/frontend/src/css/base.css
+++ b/frontend/src/css/base.css
@@ -77,6 +77,7 @@ body {
   color: #111;
   line-height: 1.2;
   font-family: "Pretendard", sans-serif;
+  box-sizing: border-box;
 }
 
 th {
@@ -97,4 +98,9 @@ button {
   outline: none;
   transition: all 0.2s;
   background: transparent;
+}
+
+:root {
+  --color-alert-red : #EE5B5B;
+  --color-aaa: #aaa;
 }
